# ray-tracer

./: CMakeLists.txt  raytracer
docs/: developer.md
include/: App.hpp  Camera.hpp  DLManager.hpp  HitPayload.hpp  Point3D.hpp  Renderer.hpp  Transformable.hpp
include/exceptions/: RayTracerException.hpp  VectorIndexOutOfBounds.hpp
include/factory/: Factory.hpp
include/plugins/GUI/: GUI.hpp  SFML.hpp
include/plugins/lights/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
include/plugins/materials/: AMaterial.hpp  CustomMaterial.hpp  DiffuseMaterial.hpp  EmissiveMaterial.hpp  FlatColorMaterial.hpp  IMaterial.hpp  MetallicMaterial.hpp
include/plugins/parser/: Parser.hpp
include/plugins/primitives/: Cone.hpp  Cylinder.hpp  ExternCone.hpp  ExternCylinder.hpp  ExternPlane.hpp  ExternSphere.hpp  Plane.hpp  Primitive.hpp  Sphere.hpp
include/plugins/transformations/: NameOfTransformation.hpp  Rotation.hpp  Transformation.hpp  Translation.hpp
include/scene/: Scene.hpp  SceneBuilder.hpp
include/utils/: Color.hpp  Ray.hpp  Utils.hpp  Vec3D.hpp
scenes/: config.cfg
src/: App.cpp  Camera.cpp  Renderer.cpp  main.cpp
src/DLManager/: DLManager.cpp
src/factory/: Factory.cpp
src/plugins/CLI/: CLI.cpp
src/plugins/GUI/: SFML.cpp
src/plugins/lights/: AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp
src/plugins/materials/: AMaterial.cpp  CustomMaterial.cpp  DiffuseMaterial.cpp  EmissiveMaterial.cpp  FlatColorMaterial.cpp  MetallicMaterial.cpp
src/plugins/parser/: Parser.cpp
src/plugins/primitives/: Cone.cpp  Cylinder.cpp  ExternCone.cpp  ExternCylinder.cpp  ExternPlane.cpp  ExternSphere.cpp  Plane.cpp  Sphere.cpp
src/plugins/transformations/: Rotation.cpp  Translation.cpp
src/scene/: Scene.cpp  SceneBuilder.cpp
src/utils/: Color.cpp  HitPayload.cpp  Ray.cpp  Utils.cpp  Vec3D.cpp
